feat and fix: sanitize URLs and add synchronized keyword for minimizing Neo4J deadlocks